# arduino-starter-kit-rs

./: .gitignore  README.md
chapter-1-setting-up/: Cargo.toml  README.md
chapter-2-spaceship-interface/: Cargo.toml  README.md
chapter-2-spaceship-interface/src/: main.rs
chapter-3-love-o-meter/: Cargo.toml  README.md
chapter-3-love-o-meter/src/: main.rs  print.rs
chapter-4-color-mixing-lamp/: Cargo.toml  README.md
chapter-4-color-mixing-lamp/src/: main.rs
chapter-5-mood-cue/: Cargo.toml  README.md
chapter-5-mood-cue/src/: main.rs
chapter-6-light-theremin/: Cargo.toml  README.md
chapter-6-light-theremin/src/: main.rs  millis.rs
components/: Cargo.toml  README.md
shared/: Cargo.toml  README.md
shared/src/: print.rs
