[package]
name = "color-mixing-lamp"
version = "0.1.0"
authors = ["Viljami Peltola <viljami.peltola@iki.fi>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "color-mixing-lamp"
test = false
bench = false

[dependencies]
avr-device = { version = "0.5.3", features = ['ufmt'] }
components = { path = "../components" }
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
